update logic dang ky kham benh